# tracer

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README  README.md  meson.build
include/: gltf_loader.h  obj_loader.h  types.h
include/gpl/: solar_position.h
scripts/: cloner.py  requirements.txt
src/: gltf_loader.cc  main.cc  obj_loader.cc
src/gpl/: solar_position.cc
